# ExposeAPIWithEndpointsCore/openapi.yaml
@@ -455,4 +455,32 @@ paths:
           description: Success
           schema:
             type: string
+  /api/Yard/PostToYardBase:
+    post:
+      tags:
+        - Yard
+      operationId: ApiYardPostToYardBasePost
+      consumes: []
+      produces:
+        - text/plain
+        - application/json
+        - text/json
+      parameters:
+        - name: containerno
+          in: query
+          required: false
+          type: string
+        - name: yardid
+          in: query
+          required: false
+          type: string
+        - name: base64image
+          in: query
+          required: false
+          type: string
+      responses:
+        '200':
+          description: Success
+          schema:
+            type: string
 definitions: {}
